--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>To do app</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
-<body>
-    <div id="top" class="header">
-        <h2>To Do List</h2>
-        <input type="text" id="newItemValue" placeholder="Add new task">
-        <button onclick="newElement()" class="addBtn">Add</button>
-    </div>
-    <div id="bottom">
-        <ul id="list">
-            <li class="checked">first</li>
-            <li>second</li>
-            <li>third</li>
-        </ul>
-    </div>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
+</head>
+
+<body>
+    <div class="todoList">
+        <div class="header">
+            <h2>To Do List</h2>
+
+            <input type="text" id="newItemValue" placeholder="Add new task" />
+            <div onclick="newElement()">
+                <a href="#" class="addBtn">
+                    <i class="fas fa-plus add"></i>
+                </a>
+            </div>
+        </div>
+
+        <div class="content">
+            <ul id="list">
+                <li class="checked">first</li>
+                <li>second</li>
+                <li>third</li>
+            </ul>
+        </div>
+    </div>
     <script src="closeMark.js"></script>
     <script src="closeCurr.js"></script>
     <script src="checked.js"></script>
     <script src="addNew.js"></script>
 </body>
+
 </html>
