add input enter listener

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2>To Do List</h2>
 
             <input type="text" id="newItemValue" placeholder="Add new task" />
-            <div onclick="newElement()">
+            <div id="linkadd" onclick="newElement()">
                 <a href="#" class="addBtn">
                     <i class="fas fa-plus add"></i>
                 </a>
@@ -34,6 +34,7 @@
     <script src="closeCurr.js"></script>
     <script src="checked.js"></script>
     <script src="addNew.js"></script>
+    <script src="inputEnterListener.js"></script>
 </body>
 
 </html>
